<resources>
    <string name="app_name">SEAT - Mobile App</string>
    <string name="juan_dela_cruz">Juan Dela Cruz!</string>
    <string name="how_can_we_help_today">How can we help today?</string>
    <string name="top_up">Top up</string>
    <string name="other_transactions">other transactions</string>
    <string name="hello">Hello!</string>
    <string name="seat_logo">Seat Logo</string>
    <string name="user_dashboard">User Dashboard</string>
    <string name="todo">TODO</string>
    <string name="register">register</string>
    <string name="loan">Loan</string>
    <string name="news_filler">Lorem ipsum dolor sit amet consectetur. Sed est tellus quis nibh vel non placerat lacinia semper. Turpis risus felis ullamcorper imperdiet ultricies. Mauris ac tellus sem enim vulputate ut.\n\n Apurus sed et enim. Sit nisl sit risus nunc. Velit dictum risus risus et turpis vitae. Ultrices ullamcorper feugiat commodo donec elit. Quis pharetra nulla tristique pellentesque habitant velit phasellus fringilla maecenas.\n\n Congue commodo tincidunt dui commodo ipsum blandit ipsum. Natoque vel cursus consequat sagittis consectetur adipiscing donec purus semper. Odio ut at nisl aliquam eu. Enim diam nisi sit porttitor consectetur integer leo odio justo. Id eu feugiat proin diam vestibulum. Elit eleifend id sed pulvinar ac fringilla magna turpis.</string>
    <string name="advisories">ADVISORIES</string>
    <string name="public_health_filler">Face masks are now required in all stations and onboard all public transport vehicles due to health and safety guidelines. Please follow the latest health advisories.</string>
    <string name="public_health_update">Public Health Update</string>
    <string name="upgrade_notice_filler">New contactless payment systems will be installed across all stations starting next week! You can now link your card for faster check-ins and more convenient travel.</string>
    <string name="upgrade_notice">Upgrade Notice</string>
    <string name="special_event_filler">In preparation for the City Parade on October 1, certain routes may experience delays or diversions. Use the app’s real-time tracker to stay updated on bus and train availability.</string>
    <string name="special_event_notice">Special Event Notice</string>
    <string name="route_adj_filler">Due to road repairs, Bus Route 12 will follow an alternate path. Please check the map for the new drop-off points along Park Avenue.</string>
    <string name="route_adjustment">Route Adjustment</string>
    <string name="serv_interrupt_filler">Train services on the Eastbound Line will be temporarily suspended from 2:00 PM to 4:00 PM tomorrow due to emergency maintenance. Bus alternatives will be provided during this period.</string>
    <string name="service_interruption">Service Interruption</string>
    <string name="weather_alert_filler">Heavy rains are expected to affect transportation services starting from 3:00 PM today. Please anticipate possible delays or service disruptions , especially in flood-prone areas.</string>
    <string name="weather_alert">Weather Alert</string>
    <string name="maintenance_filler">Due to ongoing maintenance on the Central Line, expect delays between 9:00 PM to 5:00 AM from September 21-23. Please plan your trip accordingly. Alternative routes via South Station are available.</string>
    <string name="maintenance">Maintenance</string>
    <string name="news_head_title">LRT-1 to suspend operations for 3 weekends this month</string>
    <string name="news_head_title2">MRT TOP GEAR PHILIPPINES</string>
    <string name="news_head_title3">FREE MRT RIDE THIS FOR GOVERNMENT WORKERS</string>
    <string name="news_head_title4">MINIMUM FARE HIKE IN MRT 3</string>
    <string name="news_head_title5">MRT 3 Revenue Drop</string>
    <string name="news_about">We envision a future where transportation is accessible and efficient. By harnessing the latest technology, we aim to simplify your daily commute, improve urban mobility, and help reduce congestion. We believe that through innovative tools like real-time arrival trackers and transit pass management, we can build smarter cities for everyone.</string>
    <string name="available_balance">AVAILABLE BALANCE</string>
    <string name="service_cash">Cash-in Options: Easily top-up your transportation cards from the convenience of your device.</string>
    <string name="service_realtime">Real-Time Arrival Tracker: Stay updated on bus and train arrival times, ensuring you never miss a ride.</string>
    <string name="service_crowdness">Crowdedness Tracker: Know how busy your train or bus will be before boarding.</string>
    <string name="service_discounts">Transportation Discounts: Access exclusive discounts with transit access passes, saving you money on every ride.</string>
    <string name="service_announcement">Announcements: Stay updated on delays, route changes, and important notices in real-time.</string>
    <string name="service_droppoff">Drop-off Station Notifications: Set reminders for your stop, so you’ll never miss your destination again.</string>
    <string name="service_loan">Loans for Transit Passes: We provide accessible loan options to help you manage your commute costs easily.</string>
    <string name="service_chooseus">Whether you are a daily commuter or an occasional traveler, SEAT is committed to providing a stress-free and reliable transit experience. Our cutting-edge platform is designed with you in mind, ensuring that getting from point A to point B is as easy and hassle-free as possible.</string>
    <string name="our_vision">Our Vision</string>
    <string name="select_amount">Select Amount</string>
    <string name="php_1000">PHP 1000</string>
    <string name="php_500">PHP 500</string>
    <string name="php_250">PHP 250</string>
    <string name="php_100">PHP 100</string>
    <string name="php_n50">PHP \n50</string>
    <string name="php_n20">PHP \n20</string>
    <string name="custom_amount">Custom Amount</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="gcash">GCash</string>
    <string name="maya">Maya</string>
    <string name="bdo">BDO</string>
    <string name="visa">VISA</string>
    <string name="grabpay">GrabPay</string>
    <string name="_7_eleven">7-Eleven</string>
    <string name="account_details">Account Details</string>
    <string name="confirm_transaction">Confirm Transaction</string>
    <string name="php_100_total">Php 100</string>
    <string name="total_amount_display">---</string>
    <string name="total_amount_txt">Total Amount:</string>
    <string name="purchase_now">Purchase Now</string>
    <string name="php">Php:</string>
    <string name="_00_00">00.00</string>
    <string name="peso_amount">₱</string>
    <string name="optional_message">OPTIONAL: Enter your email for the official receipt</string>
    <string name="account_format">0000-000-0000</string>
    <string name="hide_custom_txt">Hide Custom</string>
    <string name="custom_amount_txt">Custom Amount</string>
    <string name="acc_num_format">0000-0000</string>
    <string name="seat_acc_header">Enter SEAT Account Number</string>
    <string name="username">Juan Dela Cruz</string>
    <string name="reach_message">You will reach Carriedo in approximately 3 mins</string>
    <string name="faq1">Where can I buy the SEAT Card?</string>
    <string name="faq_1">Where can I buy the SEAT Card?          ˄</string>
    <string name="faq_11">Where can I buy the SEAT Card?          ˅</string>
    <string name="faq2">Can I top up using my bank?                ˅</string>
    <string name="faq22">Can I top up using my bank?                ˄</string>
    <string name="faq3">What happens if I lose the card?          ˄</string>
    <string name="faq33">What happens if I lose the card?          ˅</string>
    <string name="faq1_answer">You can purchase the SEAT Card at train stations, subject to availability. It is also available at select convenience stores and malls for your convenience.</string>
    <string name="faq2_answer">Yes, you can link your SEAT Card to your bank account or mobile wallet for easy top-ups and payments.</string>
    <string name="faq3_answer">If you lose your SEAT Card, please report it immediately through the app or contact customer support. Your card will be deactivated to prevent unauthorized use, and you can request a replacement card to restore access to your balance and services.</string>
    <string name="concern_field">Type your concerns here...</string>
    <string name="mess_confirm_head">We\'ve Got Your Message!</string>
    <string name="message_confirm_ms">Thank you for reaching out! We\'ve received your concern and are reviewing it. Our team will get back to you as soon as possible.</string>
    <string name="home_btn">Back to home</string>
    <string name="tell_head">Tell Us Your Concerns:</string>
    <string name="typuchase">Thank you for your purchase!</string>
    <string name="recent_msg">The recent order has been credited to your SEAT balance. \nCheck your account for more details.</string>
    <string name="incoming_trains"><u>Incoming Trains</u></string>
</resources>