<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_light"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ConcernReceived">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="325dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="94dp"
            android:layout_marginStart="30dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/display_message_received" />

        <TextView
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/inter_extrabold"
            android:gravity="center|start"
            android:paddingTop="3dp"
            android:letterSpacing="0.05"
            android:paddingBottom="5dp"
            android:text="@string/mess_confirm_head"
            android:textColor="#393013"
            android:textSize="23sp" />

    </LinearLayout>



    <TextView
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:textColor="#393013"
        android:textAlignment="center"
        android:text="@string/message_confirm_ms"
        android:letterSpacing="0.1"
        android:layout_width="325dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/bckHomeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#393013"
        android:text="@string/home_btn"
        android:textColor="@color/default_light" />

</LinearLayout>